Front: Rework auth, add refresh token, add action builder, add routing. Back: Increase token lifetime.

--- a/front/src/app/core/auth/auth.component.html
+++ b/front/src/app/core/auth/auth.component.html
@@ -2,6 +2,6 @@
     <label>Username</label>
     <input type="text" name="username" formControlName="username"/>
     <label>Password</label>
-    <input type="text" name="password" formControlName="password"/>
+    <input type="password" name="password" formControlName="password"/>
     <button type="submit">Submit</button>
 </form>
