Update store components

--- a/front/src/app/components/profile/profile.component.html
+++ b/front/src/app/components/profile/profile.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="profile">
     {{profile.username}}
     {{profile.email}}
+    {{profile.godmode ? 'amagod' : 'amalooser'}}
     <button (click)="logout()">Logout</button>
 </div>
 <div *ngIf="!profile">
