--- a/front/src/app/layouts/store/pages/pattern-card/pattern-card.component.html
+++ b/front/src/app/layouts/store/pages/pattern-card/pattern-card.component.html
@@ -1,1 +1,4 @@
+<br>
 <button (click)="getBack()">Back</button>
+{{id}}
+<button (click)="button.action()" class='amstore-pattern-button' [ngClass]='button.class'>{{button.label}}</button>
