--- a/front/src/app/layouts/store/pages/pattern-card/pattern-card.component.html
+++ b/front/src/app/layouts/store/pages/pattern-card/pattern-card.component.html
@@ -2,5 +2,4 @@
 <button (click)="getBack()">Back</button>
 {{id}}
 <button (click)="button.action()" class='amstore-pattern-button' [ngClass]='button.class'>{{button.label}}</button>
-<input type="file" (change)="dropFiles($event.target)" name="uploadimage" #imageInput>
-<button (click)="upload()">upload</button>
+<button *ngIf="canEdit" (click)="goToEdit()">edit</button>
