--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,2 +1,5 @@
-<amstore-profile></amstore-profile>
+<amstore-header>
+    <amstore-goods-lite></amstore-goods-lite>
+    <amstore-profile></amstore-profile>
+</amstore-header>
 <router-outlet></router-outlet>
