--- a/front/src/app/layouts/account/pages/goods/goods.component.html
+++ b/front/src/app/layouts/account/pages/goods/goods.component.html
@@ -1,1 +1,14 @@
-<p>goods works!</p>
+<h1>Patterns</h1>
+<amstore-product-card *ngFor="let item of patterns" [title]="item.name" [images]="item.images">
+    <p>{{ item.urls }}</p>
+    <p>{{ item.price_ru }} Р</p>
+    <p>{{ item.price_en }} $</p>
+</amstore-product-card>
+<h1>Jewels</h1>
+<amstore-product-card *ngFor="let item of jewels" [title]="item.name" [images]="item.images">
+    <p>{{ item.urls }}</p>
+    <p>{{ item.price_ru }} Р</p>
+    <p>{{ item.price_en }} $</p>
+</amstore-product-card>
+<p>total price: {{totalPrice | async}}</p>
+<button (click)="buy()">buy</button>
