--- a/front/src/app/layouts/store/pages/pattern-add/pattern-add.component.scss
+++ b/front/src/app/layouts/store/pages/pattern-add/pattern-add.component.scss
@@ -10,3 +10,27 @@
         background: green;
     }
 }
+.amstore-pattern-add {
+    display: flex;
+    flex-direction: row;
+
+    &-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        padding: 2px;
+        margin: 4px;
+
+        border-radius: 4px;
+
+        border: 1px solid #aaa;
+        box-shadow: 0 0 5px rgba(0,0,0,0.3);
+
+        p {
+            font-size: 12px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            margin: 4px 0;
+        }
+    }
+}
