--- a/front/src/app/layouts/store/store.component.html
+++ b/front/src/app/layouts/store/store.component.html
@@ -1,2 +1,8 @@
-<amstore-menu></amstore-menu>
-<router-outlet></router-outlet>
+<div class="row">
+    <div class="col-3">
+        <amstore-menu></amstore-menu>
+    </div>
+    <div class="col-6">
+        <router-outlet></router-outlet>
+    </div>
+</div>
