--- a/front/src/app/cdk/buttons/default/default.component.scss
+++ b/front/src/app/cdk/buttons/default/default.component.scss
@@ -11,6 +11,17 @@
         background: get-amstore-color($theme, deep);
     }
 
+    &.amstore-button-default-disabled {
+        color: get-amstore-color(gray, white);
+        background: get-amstore-color(gray, middle);
+        cursor: default;
+        pointer-events: none;
+        
+        &:hover {
+            background: get-amstore-color(gray, middle);
+        }
+    }
+
     &.amstore-button-default-stroked {
         background: get-amstore-color(gray, white);
         color: get-amstore-color($theme, deep);
