--- a/front/src/app/cdk/card/card.scss
+++ b/front/src/app/cdk/card/card.scss
@@ -15,7 +15,7 @@ $card-border-radius: 8px;
     box-shadow: 0 0 8px rgba(get-amstore-color(gray, deep), .3 );
 
     img {
-        object-fit: cover;
+        object-fit: fill;
         cursor: pointer;
         width: 100%;
         height: 100%;
