--- a/front/src/app/cdk/card/pattern-add/pattern-add.component.scss
+++ b/front/src/app/cdk/card/pattern-add/pattern-add.component.scss
@@ -1,21 +1,8 @@
 @import "/src/app/styles/spacing.scss";
 @import "/src/app/styles/theming-var.scss";
 
-.amstore-card-container-sale {
-    padding: get-spacing(1);
-    min-width: auto;
-    margin-right: get-spacing(2);
-
-    &.not-active {
-        animation: pulse 0.5s infinite alternate;
-    }
-}
-
-@keyframes pulse {
-    from {
-        box-shadow: 0px 0px 5px 1px get-amstore-color(red, middle);
-    }
-    to {
-        box-shadow: 0px 0px 10px 3px get-amstore-color(red, dark);
+.amstore-card-edit {
+    &-image-add {
+        margin: get-spacing(default) auto;
     }
 }
