--- a/front/src/app/layouts/account/pages/orders/orders.component.html
+++ b/front/src/app/layouts/account/pages/orders/orders.component.html
@@ -1,4 +1,4 @@
-<amstore-paginated-page (queryEvent)="nextPage($event)" [page]="page" [pageCount]="pageCount">
+<amstore-paginated-page (queryEvent)="nextPage($event)" [pageCount]="pageCount">
     <!-- <amstore-product-card *ngFor="let order of orders" [title]="'Заказ №' + order.id" >
         <p>status: {{ order.status }}</p>
         <p>date create: {{ order.create_date }}</p>
