--- a/front/src/app/layouts/account/pages/patterns/patterns.component.html
+++ b/front/src/app/layouts/account/pages/patterns/patterns.component.html
@@ -1,4 +1,4 @@
-<amstore-paginated-page (queryEvent)="nextPage($event)" [page]="page" [pageCount]="pageCount">
+<amstore-paginated-page (queryEvent)="nextPage($event)" [pageCount]="pageCount">
     <!-- <amstore-product-card *ngFor="let item of items" [title]="item.name" [images]="item.images" (clickTitle)="navigateToChild(item.id)">
         <p>{{ item.urls }}</p>
         <p>{{ item.price_ru }} Р</p>
