--- a/front/src/app/shared/pattern-send/amstore-pattern-send.component.scss
+++ b/front/src/app/shared/pattern-send/amstore-pattern-send.component.scss
@@ -1,10 +1,6 @@
 @import "/src/app/styles/spacing.scss";
 
 .amstore-pattern-send-wrapper {
-    display: flex;
-    flex-direction: row;
-    overflow: hidden;
-
     border-radius: 8px;
 
     margin-bottom: get-spacing(4);
@@ -13,4 +9,9 @@
     padding: get-spacing(4);
 
     box-shadow: 0 0 8px rgb(17 17 17 / 30%);
+
+    &-checkbox {
+        display: flex;
+        flex-direction: column;
+    }
 }
