--- a/front/src/app/styles/typography.scss
+++ b/front/src/app/styles/typography.scss
@@ -8,6 +8,7 @@
         16: 16px,
         18: 18px,
         20: 20px,
+        22: 22px,
         24: 24px,
         28: 28px,
         32: 32px,
@@ -21,6 +22,7 @@
         16: 20px,
         18: 22px,
         20: 24px,
+        22: 26px,
         24: 28px,
         28: 32px,
         32: 36px,
