--- a/front/src/app/shared/paginated-page/paginated-page.component.html
+++ b/front/src/app/shared/paginated-page/paginated-page.component.html
@@ -1,2 +1,2 @@
 <ng-content></ng-content>
-<amstore-paginator [page]="page" [pageCount]="pageCount" (goToPageEvent)="setQueryParams($event)"></amstore-paginator>
+<amstore-paginator [page]="page" [pageCount]="pageCount" (goToPageEvent)="setPage($event)"></amstore-paginator>
