--- a/front/src/app/shared/pattern-send/amstore-pattern-send.component.html
+++ b/front/src/app/shared/pattern-send/amstore-pattern-send.component.html
@@ -1,18 +1,26 @@
 <div *ngIf="pattern" class="amstore-pattern-send-wrapper">
     <div class="row">
+        <h2 class="col-12 text-left">Отправить схему на email</h2>
+    </div>
+    <div class="row">
         <div class="col-4">
-            <amstore-forms-input [control]="emailControl"></amstore-forms-input>
+            <amstore-forms-input [control]="emailControl">
+                Email
+            </amstore-forms-input>
         </div>
         <div class="col-4">
-            <amstore-form-select [items]="langDict" [control]="langControl"></amstore-form-select>
+            <amstore-form-select [items]="langDict" [control]="langControl">
+                Ru/En
+            </amstore-form-select>
         </div>
-        <div class="col-4">
+        <div class="col-4 amstore-pattern-send-wrapper-checkbox">
+            Размеры
             <amstore-checkbox *ngFor="let size of sizes" [control]="size.control">{{size.value}} бс</amstore-checkbox>
         </div>
-        <div class="row">
-            <div class="col-4">
-                <amstore-button (click)="send()">Отправить</amstore-button>
-            </div>
+    </div>
+    <div class="row">
+        <div class="col-12 text-right">
+            <amstore-button (click)="send()">Отправить</amstore-button>
         </div>
     </div>
 </div>
