--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -4,3 +4,6 @@
     <amstore-profile></amstore-profile>
 </amstore-header>
 <router-outlet></router-outlet>
+<footer>
+    <p style="text-align: center">Amerald Store, {{date.getFullYear()}} год.</p>
+</footer>
