--- a/front/src/app/layouts/store/store.component.scss
+++ b/front/src/app/layouts/store/store.component.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    flex-grow: 1;
 }
 
 .amstore-layout-side, .amstore-layout-body {
