--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -1,9 +1,12 @@
 @import "styles/base.scss";
 
 .amstore-root {
-    display: block;
+    display: flex;
+    flex-direction: column;
     margin: auto;
+
     max-width: 100%;
+    height: 100%;
 
     @media screen and (min-width: 1280px) {
         max-width: 1240px;
