--- a/front/src/app/core/goods-snap/goods-snap.component.html
+++ b/front/src/app/core/goods-snap/goods-snap.component.html
@@ -1,4 +1,4 @@
 <button amstore-button-round [badge]="goodsCount | async">
     <amstore-icon iconName="order" [size]="20" [contrast]="true"></amstore-icon>
-    Корзина: {{goodsPrice | async}} ₽
+    <span class="header-button-label">Корзина:</span> {{goodsPrice | async}} ₽
 </button>
