--- a/front/src/app/core/header/header.component.html
+++ b/front/src/app/core/header/header.component.html
@@ -2,6 +2,7 @@
     <img src="assets/amstore logo.svg">
     <div class="amstore-header-logo-text">
         <span class="amstore-header-logo-title">AM.STORE</span>
+        <span class="amstore-header-logo-title-mobile">AMERALD STORE</span>
         <span class="amstore-header-logo-description">OFFICIAL AMERALD STORE</span>
     </div>
 </div>
