--- a/front/src/app/core/profile/login/login.component.scss
+++ b/front/src/app/core/profile/login/login.component.scss
@@ -6,12 +6,12 @@
     padding: get-spacing(8);
 
     h1 {
-        margin: 0;
         width: 100%;
-        margin-bottom: get-spacing(4);
+        margin: 0 0 get-spacing(4) 0;
 
         @include get-amstore-font("headline", 30, null, null);
     }
+
     amstore-forms-input {
         width: 100%;
         margin: get-spacing(1) 0;
@@ -21,8 +21,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-end;
-        width: 264px;
+        width: 100%;
     }
 
 }
-
