--- a/front/src/app/layouts/store/components/menu/menu.component.scss
+++ b/front/src/app/layouts/store/components/menu/menu.component.scss
@@ -1,5 +1,6 @@
 @import "/src/app/styles/spacing.scss";
 @import "/src/app/styles/typography.scss";
+@import "/src/app/styles/untils.scss";
 
 .amstore-menu {
     padding: get-spacing(default) 0 get-spacing(default) get-spacing(6);
@@ -7,12 +8,13 @@
     &-list {
         display: flex;
         flex-direction: column;
-        padding: get-spacing(default)
+        padding: get-spacing(default);
     }
 
     amstore-button-menu {
         margin-bottom: get-spacing(2);
     }
+
     amstore-icon {
         margin-right: get-spacing(1);
     }
@@ -21,5 +23,22 @@
         margin: 0;
         cursor: default;
         @include get-amstore-font("headline", 16, null, null);
+    }
+}
+
+
+// mobile
+@media screen and (max-width: 768px) {
+    .amstore-menu {
+        padding: 0;
+        overflow: auto;
+
+        h2 {
+            display: none;
+        }
+
+        &-list {
+            flex-direction: row;
+        }
     }
 }
