--- a/front/src/app/shared/card/card.scss
+++ b/front/src/app/shared/card/card.scss
@@ -12,59 +12,45 @@ $card-border-radius: 8px;
 
     border-radius: $card-border-radius;
     margin-bottom: get-spacing(default);
-    box-shadow: 0 0 8px rgba(get-amstore-color(gray, deep), .3 );
+    box-shadow: 0 0 8px rgba(get-amstore-color(gray, deep), .3);
 
-    img {
-        object-fit: fill;
-        cursor: pointer;
-        width: 100%;
-        height: 100%;
-    }
 
     &-images {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         align-content: flex-start;
-        padding: get-spacing(2);
-        width: 30%;
 
-        &-main {
-            display: block;
-            position: relative;
-            overflow: hidden;
-
-            box-shadow: 0 0 8px rgba(get-amstore-color(gray, deep), 0.5);
-            border-radius: 8px;
-
-            margin-bottom: 4px;
-            width: 100%;
-
-            @media screen and (min-width: 1280px) {
-                height: 140px;
-            }
-            @media screen and (min-width: 1920px) {
-                height: 180px;
+        &-wrapper {
+            @media screen and (min-width: 768px) {
+                text-align: center;
+                width: 30%;
+                padding: get-spacing(2);
             }
         }
 
-        &-sub {
-            display: block;
-            position: relative;
-            width: 33%;
+        img {
+            object-fit: fill;
+            cursor: pointer;
+            margin: get-spacing(1);
+            border-radius: 4px;
+            width: 25%;
 
             @media screen and (min-width: 1280px) {
-                height: 50px;
+                height: 30px;
             }
             @media screen and (min-width: 1920px) {
-                height: 70px;
+                height: 50px;
             }
-            padding: 4px;
 
-            img {
-                border-radius: 4px;
-                box-shadow: 0 0 8px rgba(get-amstore-color(gray, deep), 0.5);
-                overflow: hidden;
+            &:first-child {
+                width: 100%;
+                @media screen and (min-width: 1280px) {
+                    height: 120px;
+                }
+                @media screen and (min-width: 1920px) {
+                    height: 160px;
+                }
             }
         }
     }
@@ -81,7 +67,7 @@ $card-border-radius: 8px;
         &-header {
             display: flex;
             flex-direction: row;
-            align-items: flex-start;
+            align-items: center;
 
             h1 {
                 margin: get-spacing(1);
@@ -113,14 +99,15 @@ $card-border-radius: 8px;
             padding: get-spacing(1);
             width: 100%;
 
-            amstore-chip:not(:last-child) {
-                margin-right: get-spacing(1);
+            amstore-chip {
+                margin: 0 get-spacing(1) get-spacing(1) 0;
             }
         }
 
         &-buttons {
             justify-content: flex-end;
         }
+
         &-info {
             margin: get-spacing(2);
             overflow: hidden;
