--- a/front/src/app/shared/pattern-send/amstore-pattern-send.component.html
+++ b/front/src/app/shared/pattern-send/amstore-pattern-send.component.html
@@ -3,17 +3,17 @@
         <h2 class="col-12 text-left">Отправить схему на email</h2>
     </div>
     <div class="row">
-        <div class="col-4">
+        <div class="col-md-12 col-xl-4">
             <amstore-forms-input [control]="emailControl">
                 Email
             </amstore-forms-input>
         </div>
-        <div class="col-4">
+        <div class="col-md-12 col-xl-4">
             <amstore-form-select [items]="langDict" [control]="langControl">
                 Ru/En
             </amstore-form-select>
         </div>
-        <div class="col-4 amstore-pattern-send-wrapper-checkbox">
+        <div class="col-md-12 col-xl-4 amstore-pattern-send-wrapper-checkbox">
             Размеры
             <amstore-checkbox *ngFor="let size of sizes" [control]="size.control">{{size.value}} бс</amstore-checkbox>
         </div>
