--- a/front/src/app/shared/card/card.scss
+++ b/front/src/app/shared/card/card.scss
@@ -30,11 +30,11 @@ $card-border-radius: 8px;
         }
 
         img {
-            object-fit: fill;
+            object-fit: cover;
             cursor: pointer;
             margin: get-spacing(1);
             border-radius: 4px;
-            width: 25%;
+            max-width: 25%;
 
             @media screen and (min-width: 1280px) {
                 height: 30px;
@@ -45,6 +45,7 @@ $card-border-radius: 8px;
 
             &:first-child {
                 width: 100%;
+                max-width: 100%;
                 @media screen and (min-width: 1280px) {
                     height: 120px;
                 }
