--- a/front/src/app/shared/card/pattern-add/pattern-add.component.html
+++ b/front/src/app/shared/card/pattern-add/pattern-add.component.html
@@ -2,7 +2,8 @@
     <div class="amstore-card-images">
         <amstore-button class="amstore-card-edit-image-add" (click)="openImagesEdit()">Изменить <br> изображения
         </amstore-button>
-        <img *ngFor="let image of images; index as i;" [src]="image.image_full" (click)="openViewer(images, i)" class="amstore-card-img">
+        <img *ngFor="let image of images" [src]="image?.image?.image_small || ''" [ngStyle]="{ order: image.index }" class="amstore-card-img">
+        <img *ngFor="let image of blobImages" [src]="image?.src" [ngStyle]="{ order: image.index }" class="amstore-card-img">
     </div>
 </div>
 <div class="amstore-card-container">
