--- a/front/src/app/shared/viewer/viewer-dialog/viewer-dialog.component.scss
+++ b/front/src/app/shared/viewer/viewer-dialog/viewer-dialog.component.scss
@@ -10,12 +10,15 @@
 
     background: rgba(0, 0, 0, 0.85);
     border-radius: 0;
+    padding: 0;
 }
 
 .amstore-viewer {
     position: relative;
     display: flex;
     flex-direction: column;
+
+    padding: get-spacing(6);
 
     &-main-image {
         > div {
@@ -50,8 +53,8 @@
 
         img {
             object-fit: cover;
-            width: 100%;
-            height: 100%;
+            width: 90vw;
+            height: 80vh;
         }
     }
 
@@ -66,8 +69,8 @@
             cursor: pointer;
             width: 48px;
             height: 48px;
-            border-radius: 4px;
-            margin: 4px;
+            border-radius: get-spacing(1);
+            margin: get-spacing(1);
             transition: 0.3s;
         }
 
