--- a/front/src/app/shared/viewer/viewer-dialog/viewer-dialog.component.scss
+++ b/front/src/app/shared/viewer/viewer-dialog/viewer-dialog.component.scss
@@ -19,6 +19,10 @@
     flex-direction: column;
 
     padding: get-spacing(6);
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 
     &-main-image {
         > div {
