--- a/front/src/app/shared/snapshot/pattern/pattern.component.html
+++ b/front/src/app/shared/snapshot/pattern/pattern.component.html
@@ -1,5 +1,5 @@
 <div class="amstore-snapshot-images">
-    <img [src]="images[0]?.image_full">
+    <img [src]="images[0]?.image_full" (click)="openViewer(data.images, 0)">
 </div>
 <div class="amstore-snapshot-container">
     <div class="amstore-snapshot-container-header">
