--- a/front/src/app/shared/viewer/viewer-dialog/viewer-dialog.component.scss
+++ b/front/src/app/shared/viewer/viewer-dialog/viewer-dialog.component.scss
@@ -57,8 +57,8 @@
 
         img {
             object-fit: cover;
-            width: 90vw;
-            height: 80vh;
+            max-width: 90vw;
+            max-height: 80vh;
         }
     }
 
