--- a/front/src/app/cdk/forms/forms.scss
+++ b/front/src/app/cdk/forms/forms.scss
@@ -6,7 +6,7 @@ $field-border-radius: 8px;
 @mixin amstore-forms-color-contrast($theme) {
     input {
         caret-color: get-amstore-color(gray, white);
-        color: get-amstore-color(gray, white);
+        //color: get-amstore-color(gray, white);
     }
 
     .mat-form-field-infix {
@@ -49,14 +49,18 @@ $field-border-radius: 8px;
         margin: get-spacing(2);
 
         background: get-amstore-color(gray, white);
-        color: get-amstore-color(gray, light);
-    }
-    .mat-form-field.mat-focused .mat-form-field-label {
         color: get-amstore-color(gray, middle);
+    }
+
+    .mat-form-field.mat-focused .mat-form-field-label {
+        color: get-amstore-color(gray, dark);
     }
 
     .mat-form-field-underline {
         display: none;
+    }
+    .mat-form-field-invalid .mat-form-field-infix {
+        border-color: get-amstore-color(red, dark);
     }
 
     &.is-contrast {
