--- a/front/src/app/core/profile/login/login.component.scss
+++ b/front/src/app/core/profile/login/login.component.scss
@@ -22,6 +22,10 @@
         flex-direction: column;
         align-items: flex-end;
         width: 100%;
-    }
 
+        &__error {
+            color: get-amstore-color(red, dark);
+            padding-bottom: get-spacing(8);
+        }
+    }
 }
