--- a/front/src/app/core/profile/profile.component.scss
+++ b/front/src/app/core/profile/profile.component.scss
@@ -1,3 +1,15 @@
+@import "/src/app/styles/spacing.scss";
+
+// desktop
+:host {
+    amstore-icon:not(:last-child) {
+        margin-right: get-spacing(1);
+    }
+
+    amstore-icon:not(:first-child) {
+        margin-left: get-spacing(1);
+    }
+}
 
 // mobile
 @media screen and (max-width: 768px) {
