--- a/front/src/app/cdk/forms/input-password/input-password.component.html
+++ b/front/src/app/cdk/forms/input-password/input-password.component.html
@@ -3,7 +3,7 @@
         <ng-content selector="amstore-forms-label"></ng-content>
     </mat-label>
 
-    <input matInput [type]="type" [formControl]="formControl" [name]="name" ngDefaultControl>
+    <input matInput [type]="type" [formControl]="formControl" [name]="name" [required]="required" ngDefaultControl>
 
     <amstore-icon [iconName]="type === 'password' ? 'eye-on' : 'eye-off'"
                   [size]="20"
