--- a/front/src/app/layouts/auth/page/registration/amstore-registration.component.html
+++ b/front/src/app/layouts/auth/page/registration/amstore-registration.component.html
@@ -3,31 +3,31 @@
 
     <form>
         <div class="row">
-            <amstore-forms-input type="email" class="col-12">
+            <amstore-forms-input type="email" [nullControl]="regForm.get('email')" [required]="true" class="col-12">
                 <amstore-forms-label>Email</amstore-forms-label>
             </amstore-forms-input>
-            <amstore-forms-input-password class="col-12" [nullControl]="regForm.get('password')">
+            <amstore-forms-input-password class="col-12" [nullControl]="regForm.get('password')" [required]="true">
                 <amstore-forms-label>Пароль</amstore-forms-label>
             </amstore-forms-input-password>
-            <amstore-forms-input-password class="col-12" [nullControl]="regForm.get('passwordRepeat')">
+            <amstore-forms-input-password class="col-12" [nullControl]="regForm.get('passwordRepeat')" [required]="true">
                 <amstore-forms-label>Повторите пароль</amstore-forms-label>
             </amstore-forms-input-password>
         </div>
         <div class="row">
-            <amstore-forms-input class="col-6">
+            <amstore-forms-input class="col-6" [nullControl]="regForm.get('firstName')">
                 <amstore-forms-label>Имя</amstore-forms-label>
             </amstore-forms-input>
-            <amstore-forms-input class="col-6">
+            <amstore-forms-input class="col-6" [nullControl]="regForm.get('lastName')">
                 <amstore-forms-label>Фамилия</amstore-forms-label>
             </amstore-forms-input>
         </div>
-        <amstore-checkbox>
+        <amstore-checkbox [control]="isAccept">
             Я согласен с условиями регистрации
         </amstore-checkbox>
 
     </form>
     <div class="row justify-content-end">
-        <amstore-button class="col" size="large">Зарегестрироваться</amstore-button>
+        <amstore-button class="col" size="large" [disabled]="!isAccept.value || regForm.invalid" (click)="sendUser()">Зарегестрироваться</amstore-button>
     </div>
 
 </amstore-panel-basic>
